--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,6 +12,7 @@
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  background-color: #93a1a1;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
