--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,7 +12,8 @@
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
-  background-color: #93a1a1;
+  background-color: #a3dbdb;
+  padding: 0px 3px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
