--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,8 +12,8 @@
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
-  background-color: #a3dbdb;
-  padding: 0px 3px;
+  background-color: #d3dddd91;
+  padding: 0px 7px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
