--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/">About</a>
+            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/notes">Notes</a>
           </nav>
         </header>
