--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Posts</a>
+            <a href="{{ site.baseurl }}/notes">Notes</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
